--- a/3161 Project/elearning_platform/backend/requirements.txt
+++ b/3161 Project/elearning_platform/backend/requirements.txt
@@ -8,6 +8,11 @@ colorama==0.4.6
 defusedxml==0.7.1
 et_xmlfile==2.0.0
 Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
+PyMySQL==1.1.0
+SQLAlchemy==2.0.29
 flask-mysql-connector==1.1.0
 Flask-MySQLdb==2.0.0
 google-ai-generativelanguage==0.6.15
